# perth5_cxx

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONSTITUENTS.md  LICENCE  README.md  conftest.py  pyproject.toml  setup.py
_custom_build/: backend.py
include/perth/: axis.hpp  constituent.hpp  datetime.hpp  delta_t.hpp  doodson.hpp  eigen.hpp  fundarg.hpp  grid.hpp  inference.hpp  love_numbers.hpp  math.hpp  nodal_corrections.hpp  parallel_for.hpp  tidal_frequency.hpp  tidal_model.hpp  tide.hpp
scripts/: render_table.py
src/perth/: __init__.py  _core.pyi  core.pyi  model.py
src/pybind/: axis.cpp  axis.hpp  constituent.cpp  constituent.hpp  inference.cpp  inference.hpp  main.cpp  tidal_model.cpp  tidal_model.hpp  tide.cpp  tide.hpp
src/tests/: CMakeLists.txt  consitutent.cpp  delta_t.cpp  doodson.cpp  inference.cpp  love_numbers.cpp  nodal_corrections.cpp
tests/: __init__.py  test_model.py  test_ocean_tide.py
